--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
-MESHTASTIC_DEVICE=/dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0
+# Database configuration
+DATABASE_PATH=/app/backend/data/meshradar.db
 
-DATABASE_PATH=/app/backend/data/meshtastic.db
+# USB Device Configuration (optional)
+# Only needed if you want to use USB/Serial connection in Docker
+# Uncomment the devices section in docker-compose.yml and set your device path:
+# Common paths:
+# - /dev/ttyUSB0    (Linux)
+# - /dev/ttyACM0    (Linux, some boards)
+# - COM3             (Windows with WSL)
